--- a/Project LR/projectLR.ipynb
+++ b/Project LR/projectLR.ipynb
@@ -40,7 +40,7 @@
    },
    "cell_type": "code",
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd\n""##we import panda",
     "df=pd.read_csv('garments_worker_productivity.csv')\n",
     "df.head()\n",
     "df"
