--- a/Project LR/projectLR.ipynb
+++ b/Project LR/projectLR.ipynb
@@ -10,7 +10,8 @@
      "start_time": "2024-12-08T15:39:27.511811Z"
     }
    },
-   "source": "!pip install numpy ##test",
+   "source": "!pip install numpy",
+"## test",
    "outputs": [
     {
      "name": "stdout",
