--- a/Project LR/projectLR.ipynb
+++ b/Project LR/projectLR.ipynb
@@ -11,7 +11,7 @@
     }
    },
    "source": ["!pip install numpy",
-"## we install numpy"]
+"## we install numpy"],
    "outputs": [
     {
      "name": "stdout",
@@ -544,7 +544,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Check for missing values",
+   "source": " Check for missing values",
    "id": "9f99619ea56ebac5"
   },
   {
@@ -697,7 +697,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Convert the non-numerical values",
+   "source": " Convert the non-numerical values",
    "id": "d7752ecafe3865f0"
   },
   {
@@ -734,7 +734,7 @@
    "cell_type": "code",
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
-    "## le is a variable that has all the feature that LabelEncoder has \n",
+    " le is a variable that has all the feature that LabelEncoder has \n",
     "le=LabelEncoder()\n",
     "\n",
     "for col in ['date','quarter','department','day']:\n",
@@ -1040,7 +1040,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Normalization ",
+   "source": " Normalization ",
    "id": "4e7ef39d83a3e687"
   },
   {
@@ -1053,8 +1053,8 @@
    "cell_type": "code",
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "## we will create a variable that has access to the StandardSclarer library \n",
-    "## this meanas that the variable will has access to everything the library has \n",
+    " we will create a variable that has access to the StandardSclarer library \n",
+    " this meanas that the variable will has access to everything the library has \n",
     "\n",
     "scaler = StandardScaler() ## scaler is the variable \n",
     "## normalization is applied for the inputs\n",
